--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -45,6 +45,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Assets pour Unity\Scripts\Collect.cs" />
      <Compile Include="Assets\Assets pour Unity\Scripts\PlayerBehaviourScript.cs" />
      <Compile Include="Assets\Assets pour Unity\Scripts\RandomObjects.cs" />
      <None Include="Assets\Assets pour Unity\Skyboxes\_skybox info.txt" />
