--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
      <Compile Include="Assets\Assets pour Unity\Scripts\Collect.cs" />
      <Compile Include="Assets\Assets pour Unity\Scripts\GameInterface.cs" />
+     <Compile Include="Assets\Assets pour Unity\Scripts\NextLevelSensor.cs" />
      <Compile Include="Assets\Assets pour Unity\Scripts\PlayerBehaviourScript.cs" />
      <Compile Include="Assets\Assets pour Unity\Scripts\RandomObjects.cs" />
      <None Include="Assets\Assets pour Unity\Skyboxes\_skybox info.txt" />
