--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
      <Compile Include="Assets\Assets pour Unity\Scripts\Affichage.cs" />
      <Compile Include="Assets\Assets pour Unity\Scripts\BinSensor.cs" />
+     <Compile Include="Assets\Assets pour Unity\Scripts\ButtonImage.cs" />
      <Compile Include="Assets\Assets pour Unity\Scripts\Collect.cs" />
      <Compile Include="Assets\Assets pour Unity\Scripts\GameInterface.cs" />
      <Compile Include="Assets\Assets pour Unity\Scripts\Inventory.cs" />
