--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -56,6 +56,7 @@
      <Compile Include="Assets\Scripts\NextLevelSensor.cs" />
      <Compile Include="Assets\Scripts\PlayerBehaviourScript.cs" />
      <Compile Include="Assets\Scripts\RandomObjects.cs" />
+     <Compile Include="Assets\Scripts\Sort.cs" />
      <None Include="Assets\Skyboxes\_skybox info.txt" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
