time mode scene

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -51,6 +51,7 @@
      <Compile Include="Assets\Scripts\Collect.cs" />
      <Compile Include="Assets\Scripts\Display.cs" />
      <Compile Include="Assets\Scripts\GameInterface.cs" />
+     <Compile Include="Assets\Scripts\GameInterface2.cs" />
      <Compile Include="Assets\Scripts\Inventory.cs" />
      <Compile Include="Assets\Scripts\MainMenu.cs" />
      <Compile Include="Assets\Scripts\NextLevelSensor.cs" />
